[18] - add facebook auth (OAuth2) integration, refactor security model